few changes in responsive design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="logo">
         <img src="images/qBfjV39i_400x400.jpg" alt="Jv Shah" />
 
-        <p>@ <span>Jv</span> Shah</p>
+        <span>Jv Shah</span>
       </div>
 
       <ul class="navbar">
@@ -42,8 +42,8 @@
     <header>
       <div class="left">
         <h2>
-          Hi! I'm Jv Shah and I turn ideas into digital experiences that people
-          love.
+          Hi! I'm <span>Jv Shah</span> and I turn ideas into digital experiences
+          that people love.
         </h2>
 
         <h4>
