added about section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,23 @@
       </div>
     </header>
 
+    <!-- About Me section -->
+    <div class="serve">
+      <h2 style="text-align: center; font-size: 2rem">About Me</h2>
+      <h3>
+        Welcome, make yourself at home. I am a multidisciplinary web designer,
+        designing and building beautiful digital products, for companies around
+        the world.
+
+        <p>
+          I believe that design should be both functional and aesthetically
+          pleasing, and I am dedicated to delivering exceptional user
+          experiences through thoughtful design and meticulous attention to
+          detail .
+        </p>
+      </h3>
+    </div>
+
     <!-- <section class="container paras">
       <div class="serve">
         <h3>
