work section added

--- a/index.html
+++ b/index.html
@@ -63,22 +63,87 @@
     </header>
 
     <!-- About Me section -->
-    <div class="serve">
-      <h2 style="text-align: center; font-size: 2rem">About Me</h2>
-      <h3>
-        Welcome, make yourself at home. I am a multidisciplinary web designer,
-        designing and building beautiful digital products, for companies around
-        the world.
+    <section class="about">
+      <div>
+        <h2>About Me</h2>
+        <h3>
+          Welcome, make yourself at home. I am a multidisciplinary web designer,
+          designing and building beautiful digital products, for companies
+          around the world.
 
-        <p>
-          I believe that design should be both functional and aesthetically
-          pleasing, and I am dedicated to delivering exceptional user
-          experiences through thoughtful design and meticulous attention to
-          detail .
-        </p>
-      </h3>
-    </div>
+          <p>
+            I believe that design should be both functional and aesthetically
+            pleasing, and I am dedicated to delivering exceptional user
+            experiences through thoughtful design and meticulous attention to
+            detail .
+          </p>
+        </h3>
+      </div>
+    </section>
 
+    <!-- WORK SECTION -->
+
+    <section class="about work">
+      <div class="mywork">
+        <h2>My Work</h2>
+      </div>
+
+      <ul class="works-list">
+        <li class="active"><a href="">All</a></li>
+        <li><a href="">Designing</a></li>
+        <li><a href="">Development</a></li>
+      </ul>
+
+      <div class="grid">
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Amazon Clone</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Netflix Clone</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Restaurant Website Design</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Portfolio Website Design</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>NFT Website Design</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Adventure Webiste Design</h3>
+          <small>
+            <a href="#">Demo here</a>
+          </small>
+        </div>
+      </div>
+    </section>
     <!-- <section class="container paras">
       <div class="serve">
         <h3>
