added linear background

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
           </p>
         </h3>
       </div>
+
+      <div class="btn work-btn">
+        <a href="#">Download Resume </a>
+
+        <i class="fa-solid fa-arrow-right-long"></i>
+      </div>
     </section>
 
     <!-- WORK SECTION -->
@@ -137,28 +143,12 @@
 
         <div class="box">
           <img src="images/131235.jpg" alt="" />
-          <h3>Adventure Webiste Design</h3>
+          <h3>Adventure Website Design</h3>
           <small>
             <a href="#">Demo here</a>
           </small>
         </div>
       </div>
     </section>
-    <!-- <section class="container paras">
-      <div class="serve">
-        <h3>
-          Welcome, make yourself at home. I am a multidisciplinary web designer,
-          designing and building beautiful digital products, for companies
-          around the world.
-
-          <p>
-            I believe that design should be both functional and aesthetically
-            pleasing, and I am dedicated to delivering exceptional user
-            experiences through thoughtful design and meticulous attention to
-            detail .
-          </p>
-        </h3>
-      </div>
-    </section> -->
   </body>
 </html>
