added services section

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <!-- Header Section -->
     <header>
       <div class="left">
-        <h2>
+        <h1>
           Hi! I'm <span>Jv Shah</span> and I turn ideas into digital experiences
           that people love.
-        </h2>
+        </h1>
 
         <h4>
           This is my Portfolio website. Here you can explore my work and skills.
@@ -147,6 +147,47 @@
           <small>
             <a href="#">Demo here</a>
           </small>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES SECTION -->
+
+    <section class="services about">
+      <h2>My Services</h2>
+      <div class="container">
+        <!-- <h2>My Services</h2> -->
+
+        <div class="services-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h3>Web Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
+
+          <div>
+            <i class="fa-brands fa-figma"></i>
+            <h3>UI/UX Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
+
+          <div>
+            <i class="fa-brands fa-app-store"></i>
+            <h3>App Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
