added animations to services section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
               experience and making sure the website is easy to navigate.
             </p>
             <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/dev.png" alt="" />
+            </span>
           </div>
 
           <div>
@@ -177,6 +181,10 @@
               experience and making sure the website is easy to navigate.
             </p>
             <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/icons8-designer-100.png" alt="" />
+            </span>
           </div>
 
           <div>
@@ -187,6 +195,10 @@
               experience and making sure the website is easy to navigate.
             </p>
             <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/appdes.png" alt="" />
+            </span>
           </div>
         </div>
       </div>
