added footer section

--- a/index.html
+++ b/index.html
@@ -81,9 +81,66 @@
       </div>
 
       <div class="btn work-btn">
-        <a href="#">Download Resume </a>
+        <a
+          href="https://drive.google.com/drive/u/1/folders/1gzzdbWenfw7SAaz6pbzJ2dDraexB5I10"
+          target="_blank"
+          >Download Resume
+        </a>
 
         <i class="fa-solid fa-arrow-right-long"></i>
+      </div>
+    </section>
+
+    <!-- SERVICES SECTION -->
+
+    <section class="services about">
+      <h2>My Services</h2>
+      <div class="container">
+        <!-- <h2>My Services</h2> -->
+
+        <div class="services-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h3>Web Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/dev.png" alt="" />
+            </span>
+          </div>
+
+          <div>
+            <i class="fa-brands fa-figma"></i>
+            <h3>UI/UX Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/icons8-designer-100.png" alt="" />
+            </span>
+          </div>
+
+          <div>
+            <i class="fa-brands fa-app-store"></i>
+            <h3>App Design</h3>
+            <p>
+              I design websites for businesses and individuals, focusing on user
+              experience and making sure the website is easy to navigate.
+            </p>
+            <a href="#">Learn More</a>
+
+            <span class="design">
+              <img src="images/appdes.png" alt="" />
+            </span>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -151,57 +208,63 @@
       </div>
     </section>
 
-    <!-- SERVICES SECTION -->
+    <!-- FOOTER SECTION -->
 
-    <section class="services about">
-      <h2>My Services</h2>
-      <div class="container">
-        <!-- <h2>My Services</h2> -->
+    <footer class="contact about">
+      <h2>Get in Touch</h2>
 
-        <div class="services-list">
-          <div>
-            <i class="fa-solid fa-code"></i>
-            <h3>Web Design</h3>
-            <p>
-              I design websites for businesses and individuals, focusing on user
-              experience and making sure the website is easy to navigate.
-            </p>
-            <a href="#">Learn More</a>
+      <div class="containerr">
+        <div class="row">
+          <div class="contact-left">
+            <span>Contact Me </span>
+            <p><i class="fa-solid fa-paper-plane"></i> contact@gmail.com</p>
+            <p><i class="fa-solid fa-square-phone"></i> 0123456789</p>
 
-            <span class="design">
-              <img src="images/dev.png" alt="" />
-            </span>
+            <div class="social-icons">
+              <a href="https://twitter.com/JvShah124">
+                <i class="fa-brands fa-x-twitter"></i>
+              </a>
+              <a href="https://github.com/Jvshah124">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/javaid-ahmad-shah-416821b9/">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+
+              <a href="">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
           </div>
+          <div class="contact-right">
+            <form>
+              <input
+                type="text"
+                name="Name"
+                placeholder="Enter Your Name"
+                required
+              />
+              <input
+                type="email"
+                name="email"
+                placeholder="Enter Your Email"
+                required
+              />
 
-          <div>
-            <i class="fa-brands fa-figma"></i>
-            <h3>UI/UX Design</h3>
-            <p>
-              I design websites for businesses and individuals, focusing on user
-              experience and making sure the website is easy to navigate.
-            </p>
-            <a href="#">Learn More</a>
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
 
-            <span class="design">
-              <img src="images/icons8-designer-100.png" alt="" />
-            </span>
-          </div>
-
-          <div>
-            <i class="fa-brands fa-app-store"></i>
-            <h3>App Design</h3>
-            <p>
-              I design websites for businesses and individuals, focusing on user
-              experience and making sure the website is easy to navigate.
-            </p>
-            <a href="#">Learn More</a>
-
-            <span class="design">
-              <img src="images/appdes.png" alt="" />
-            </span>
+              <button class="btn" type="submit">Submit</button>
+            </form>
           </div>
         </div>
       </div>
-    </section>
+    </footer>
+    <div class="copyright">
+      <p>Copyright &copy; Portfolio <span>Jv Shah</span></p>
+    </div>
   </body>
 </html>
