added scroll reveal

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="containerr">
         <div class="row">
           <div class="contact-left">
-            <span>Contact Me </span>
+            <span id="ctc-footer">Contact Me </span>
             <p><i class="fa-solid fa-paper-plane"></i> contact@gmail.com</p>
             <p><i class="fa-solid fa-square-phone"></i> 0123456789</p>
 
@@ -262,9 +262,17 @@
           </div>
         </div>
       </div>
+      <div class="copyright">
+        <p>Copyright &copy; Portfolio <span>Jv Shah</span></p>
+      </div>
     </footer>
-    <div class="copyright">
-      <p>Copyright &copy; Portfolio <span>Jv Shah</span></p>
-    </div>
+
+    <!-- JS SECTION -->
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- JS File -->
+
+    <script src="main.js"></script>
   </body>
 </html>
