added sv hover effect to the navbar

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       </div>
 
       <ul class="navbar">
-        <li class="nav-link home">
+        <li class="nav-link homee">
           <a href="">Home</a>
         </li>
-        <li class="nav-link"><a href="">About</a></li>
-        <li class="nav-link"><a href="">Work</a></li>
-        <li class="nav-link"><a href="">Solutions</a></li>
+        <li class="nav-link aboutt"><a href="">About</a></li>
+        <li class="nav-link servicess"><a href="">Services</a></li>
+        <li class="nav-link workk"><a href="">My Work</a></li>
       </ul>
     </nav>
 
