--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- NAVBAR SECTION -->
 
-    <nav class="container">
+    <nav class="container" id="home">
       <div class="logo">
         <img src="images/qBfjV39i_400x400.jpg" alt="Jv Shah" />
 
@@ -30,11 +30,11 @@
 
       <ul class="navbar">
         <li class="nav-link homee">
-          <a href="">Home</a>
+          <a href="#home">Home</a>
         </li>
-        <li class="nav-link aboutt"><a href="">About</a></li>
-        <li class="nav-link servicess"><a href="">Services</a></li>
-        <li class="nav-link workk"><a href="">My Work</a></li>
+        <li class="nav-link aboutt"><a href="#about">About</a></li>
+        <li class="nav-link servicess"><a href="#services">Services</a></li>
+        <li class="nav-link workk"><a href="#work">My Work</a></li>
       </ul>
     </nav>
 
@@ -63,7 +63,7 @@
     </header>
 
     <!-- About Me section -->
-    <section class="about">
+    <section class="about" id="about">
       <div>
         <h2>About Me</h2>
         <h3>
@@ -93,7 +93,7 @@
 
     <!-- SERVICES SECTION -->
 
-    <section class="services about">
+    <section class="services about" id="services">
       <h2>My Services</h2>
       <div class="container">
         <!-- <h2>My Services</h2> -->
@@ -146,7 +146,7 @@
 
     <!-- WORK SECTION -->
 
-    <section class="about work">
+    <section class="about work" id="work">
       <div class="mywork">
         <h2>My Work</h2>
       </div>
