added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
         </li>
         <li class="nav-link aboutt"><a href="#about">About</a></li>
         <li class="nav-link servicess"><a href="#services">Services</a></li>
-        <li class="nav-link workk"><a href="#work">My Work</a></li>
+        <li class="nav-link workk"><a href="#work">Work</a></li>
+
+        <!-- DARK MODE TOGGLE SECTION -->
+        <label class="switch">
+          <input type="checkbox" id="modeToggle" />
+
+          <span class="slider round"></span>
+        </label>
       </ul>
     </nav>
 
