--- a/index.html
+++ b/index.html
@@ -169,7 +169,11 @@
           <img src="images/131235.jpg" alt="" />
           <h3>Amazon Clone</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1692144006447370265?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
 
@@ -177,39 +181,94 @@
           <img src="images/131235.jpg" alt="" />
           <h3>Netflix Clone</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1693833700029653458?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
 
         <div class="box">
           <img src="images/131235.jpg" alt="" />
-          <h3>Restaurant Website Design</h3>
+          <h3>Restaurant Website</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1697138069764513934?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
 
         <div class="box">
           <img src="images/131235.jpg" alt="" />
-          <h3>Portfolio Website Design</h3>
+          <h3>Portfolio Website</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1694559011386081747?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
 
         <div class="box">
           <img src="images/131235.jpg" alt="" />
-          <h3>NFT Website Design</h3>
+          <h3>NFT Website</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1725046334686933386?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
 
         <div class="box">
           <img src="images/131235.jpg" alt="" />
-          <h3>Adventure Website Design</h3>
+          <h3>Gaming Website</h3>
           <small>
-            <a href="#">Demo here</a>
+            <a
+              href="https://x.com/JvShah124/status/1714220662305501240?s=20"
+              target="_blank"
+              >Demo here</a
+            >
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Saas Website</h3>
+          <small>
+            <a
+              href="https://x.com/JvShah124/status/1727590718896828742?s=20"
+              target="_blank"
+              >Demo here</a
+            >
+          </small>
+        </div>
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Yolo Website</h3>
+          <small>
+            <a
+              href="https://x.com/JvShah124/status/1730167911002919140?s=20"
+              target="_blank"
+              >Demo here</a
+            >
+          </small>
+        </div>
+
+        <div class="box">
+          <img src="images/131235.jpg" alt="" />
+          <h3>Food Delivery Dashboard Website</h3>
+          <small>
+            <a
+              href="https://x.com/JvShah124/status/1730167911002919140?s=20"
+              target="_blank"
+              >Demo here</a
+            >
           </small>
         </div>
       </div>
@@ -238,7 +297,7 @@
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
 
-              <a href="">
+              <a href="https://instagram.com/jv_shah_124">
                 <i class="fa-brands fa-instagram"></i>
               </a>
             </div>
