hero button hover effects

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </h4>
 
         <div class="btn">
-          <a href="#">Start a project </a>
+          <a href="https://twitter.com/JvShah124">Start a project </a>
 
           <i class="fa-solid fa-arrow-right-long"></i>
         </div>
