added gotop button

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
       <div class="copyright">
         <p>Copyright &copy; Portfolio <span>Jv Shah</span></p>
       </div>
+      <a class="gotop-btn" href="#home"><i class="fa-solid fa-angle-up"></i></a>
     </footer>
-
     <!-- JS SECTION -->
 
     <script src="https://unpkg.com/scrollreveal"></script>
