copyright font size increased

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               />
               <input
                 type="email"
-                name="email"
+                name="Email"
                 placeholder="Enter Your Email"
                 required
               />
