added skills section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,54 @@
       </div>
     </section>
 
+    <!-- SKILLS SECTION -->
+    <section class="skills about" id="skills">
+      <h2>My Skills</h2>
+      <div class="container">
+        <div class="boxes skills-list">
+          <div class="card" style="--clr: rgba(220, 216, 215, 0.941)">
+            <h3>HTML</h3>
+
+            <i class="fa-solid fa-head-side-virus"></i>
+
+            <p>Improve knowledge and learning</p>
+          </div>
+
+          <div class="card" style="--clr: #29cd3f">
+            <h3>CSS</h3>
+
+            <i class="fa-solid fa-palette"></i>
+
+            <p>Boost creativity and productivity</p>
+          </div>
+
+          <div class="card" style="--clr: #9baf19">
+            <h3>JAVASCRIPT</h3>
+
+            <i class="fa-solid fa-people-group"></i>
+
+            <p>Enable others to lead and innovate</p>
+          </div>
+
+          <div class="card" style="--clr: #d72eb8">
+            <h3>FIGMA</h3>
+
+            <i class="fa-solid fa-gears"></i>
+
+            <p>Build and deploy responsibly</p>
+          </div>
+
+          <div class="card" style="--clr: #d72eb8">
+            <h3>WORDPRESS</h3>
+
+            <i class="fa-solid fa-gears"></i>
+
+            <p>Design Your Future</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- WORK SECTION -->
 
     <section class="about work" id="work">
@@ -303,7 +351,7 @@
             </div>
           </div>
           <div class="contact-right">
-            <form>
+            <form name="submit-to-google-sheet">
               <input
                 type="text"
                 name="Name"
@@ -325,6 +373,7 @@
 
               <button class="btn" type="submit">Submit</button>
             </form>
+            <span id="msg"></span>
           </div>
         </div>
       </div>
